return to initial version

--- a/test.ioc
+++ b/test.ioc
@@ -12,7 +12,7 @@ Dma.USART1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART1_RX.0.Instance=DMA2_Stream2
 Dma.USART1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.USART1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART1_RX.0.Mode=DMA_NORMAL
+Dma.USART1_RX.0.Mode=DMA_CIRCULAR
 Dma.USART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART1_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART1_RX.0.Priority=DMA_PRIORITY_LOW
@@ -32,7 +32,7 @@ Dma.USART2_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART2_RX.2.Instance=DMA1_Stream5
 Dma.USART2_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.USART2_RX.2.MemInc=DMA_MINC_ENABLE
-Dma.USART2_RX.2.Mode=DMA_NORMAL
+Dma.USART2_RX.2.Mode=DMA_CIRCULAR
 Dma.USART2_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART2_RX.2.PeriphInc=DMA_PINC_DISABLE
 Dma.USART2_RX.2.Priority=DMA_PRIORITY_LOW
@@ -83,8 +83,8 @@ MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA2_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA2_Stream7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream2_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream7_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -95,7 +95,6 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_UP_TIM10_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
-NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
