--- a/test.ioc
+++ b/test.ioc
@@ -16,19 +16,21 @@ Mcu.IP5=USART2
 Mcu.IPNb=6
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
-Mcu.Pin0=PF9
-Mcu.Pin1=PF10
-Mcu.Pin10=VP_SYS_VS_tim1
-Mcu.Pin11=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin2=PH0-OSC_IN
-Mcu.Pin3=PH1-OSC_OUT
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA9
-Mcu.Pin7=PA10
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=12
+Mcu.Pin0=PE3
+Mcu.Pin1=PE4
+Mcu.Pin10=PA13
+Mcu.Pin11=PA14
+Mcu.Pin12=VP_SYS_VS_tim1
+Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin2=PF9
+Mcu.Pin3=PF10
+Mcu.Pin4=PH0-OSC_IN
+Mcu.Pin5=PH1-OSC_OUT
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA9
+Mcu.Pin9=PA10
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -45,6 +47,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_UP_TIM10_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.USART1_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
@@ -61,6 +64,10 @@ PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PE3.Locked=true
+PE3.Signal=GPIO_Input
+PE4.Locked=true
+PE4.Signal=GPIO_Input
 PF10.Locked=true
 PF10.Signal=GPIO_Output
 PF9.GPIOParameters=PinState
@@ -139,8 +146,8 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.IPParameters=Prescaler,Period,AutoReloadPreload
-TIM2.Period=1000-1
-TIM2.Prescaler=84-1
+TIM2.Period=10000-1
+TIM2.Prescaler=8400-1
 USART1.BaudRate=4800000
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
