解决按键消抖的问题

--- a/test.ioc
+++ b/test.ioc
@@ -146,9 +146,9 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.IPParameters=Prescaler,Period,AutoReloadPreload
-TIM2.Period=10000-1
-TIM2.Prescaler=8400-1
-USART1.BaudRate=4800000
+TIM2.Period=50-1
+TIM2.Prescaler=84-1
+USART1.BaudRate=115200
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
