--- a/test.ioc
+++ b/test.ioc
@@ -13,24 +13,30 @@ Mcu.IP2=SYS
 Mcu.IP3=TIM2
 Mcu.IP4=USART1
 Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP6=USART3
+Mcu.IP7=USART6
+Mcu.IPNb=8
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE3
 Mcu.Pin1=PE4
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=VP_SYS_VS_tim1
-Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin10=PC6
+Mcu.Pin11=PC7
+Mcu.Pin12=PA9
+Mcu.Pin13=PA10
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=VP_SYS_VS_tim1
+Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PF9
 Mcu.Pin3=PF10
 Mcu.Pin4=PH0-OSC_IN
 Mcu.Pin5=PH1-OSC_OUT
 Mcu.Pin6=PA2
 Mcu.Pin7=PA3
-Mcu.Pin8=PA9
-Mcu.Pin9=PA10
-Mcu.PinsNb=14
+Mcu.Pin8=PB10
+Mcu.Pin9=PB11
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -63,6 +69,14 @@ PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB10.Mode=Asynchronous
+PB10.Signal=USART3_TX
+PB11.Mode=Asynchronous
+PB11.Signal=USART3_RX
+PC6.Mode=Asynchronous
+PC6.Signal=USART6_TX
+PC7.Mode=Asynchronous
+PC7.Signal=USART6_RX
 PE3.Locked=true
 PE3.Signal=GPIO_Input
 PE4.Locked=true
@@ -147,11 +161,21 @@ TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.IPParameters=Prescaler,Period,AutoReloadPreload
 TIM2.Period=5000-1
 TIM2.Prescaler=8400-1
-USART1.BaudRate=115200
+USART1.BaudRate=4800000
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
-USART2.IPParameters=VirtualMode
+USART2.BaudRate=4800000
+USART2.IPParameters=VirtualMode,OverSampling,BaudRate
+USART2.OverSampling=UART_OVERSAMPLING_8
 USART2.VirtualMode=VM_ASYNC
+USART3.BaudRate=4800000
+USART3.IPParameters=VirtualMode,OverSampling,BaudRate
+USART3.OverSampling=UART_OVERSAMPLING_8
+USART3.VirtualMode=VM_ASYNC
+USART6.BaudRate=4800000
+USART6.IPParameters=VirtualMode,OverSampling,BaudRate
+USART6.OverSampling=UART_OVERSAMPLING_16
+USART6.VirtualMode=VM_ASYNC
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
