--- a/test.ioc
+++ b/test.ioc
@@ -20,23 +20,27 @@ Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE3
 Mcu.Pin1=PE4
-Mcu.Pin10=PC6
-Mcu.Pin11=PC7
-Mcu.Pin12=PA9
-Mcu.Pin13=PA10
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=VP_SYS_VS_tim1
-Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin10=PB10
+Mcu.Pin11=PB11
+Mcu.Pin12=PC6
+Mcu.Pin13=PC7
+Mcu.Pin14=PC8
+Mcu.Pin15=PA8
+Mcu.Pin16=PA9
+Mcu.Pin17=PA10
+Mcu.Pin18=PA13
+Mcu.Pin19=PA14
 Mcu.Pin2=PF9
+Mcu.Pin20=VP_SYS_VS_tim1
+Mcu.Pin21=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PF10
 Mcu.Pin4=PH0-OSC_IN
 Mcu.Pin5=PH1-OSC_OUT
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PB10
-Mcu.Pin9=PB11
-Mcu.PinsNb=18
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PE15
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -57,6 +61,8 @@ NVIC.TIM2_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA1.Locked=true
+PA1.Signal=GPIO_Output
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
@@ -67,6 +73,8 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA8.Locked=true
+PA8.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB10.Mode=Asynchronous
@@ -77,6 +85,10 @@ PC6.Mode=Asynchronous
 PC6.Signal=USART6_TX
 PC7.Mode=Asynchronous
 PC7.Signal=USART6_RX
+PC8.Locked=true
+PC8.Signal=GPIO_Output
+PE15.Locked=true
+PE15.Signal=GPIO_Output
 PE3.Locked=true
 PE3.Signal=GPIO_Input
 PE4.Locked=true
@@ -123,7 +135,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true,7-MX_USART6_UART_Init-USART6-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
