--- a/test.ioc
+++ b/test.ioc
@@ -20,27 +20,31 @@ Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE3
 Mcu.Pin1=PE4
-Mcu.Pin10=PB10
-Mcu.Pin11=PB11
-Mcu.Pin12=PC6
-Mcu.Pin13=PC7
-Mcu.Pin14=PC8
-Mcu.Pin15=PA8
-Mcu.Pin16=PA9
-Mcu.Pin17=PA10
-Mcu.Pin18=PA13
-Mcu.Pin19=PA14
-Mcu.Pin2=PF9
-Mcu.Pin20=VP_SYS_VS_tim1
-Mcu.Pin21=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin3=PF10
-Mcu.Pin4=PH0-OSC_IN
-Mcu.Pin5=PH1-OSC_OUT
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA3
-Mcu.Pin9=PE15
-Mcu.PinsNb=22
+Mcu.Pin10=PA1
+Mcu.Pin11=PA2
+Mcu.Pin12=PA3
+Mcu.Pin13=PE15
+Mcu.Pin14=PB10
+Mcu.Pin15=PB11
+Mcu.Pin16=PC6
+Mcu.Pin17=PC7
+Mcu.Pin18=PC8
+Mcu.Pin19=PA8
+Mcu.Pin2=PF1
+Mcu.Pin20=PA9
+Mcu.Pin21=PA10
+Mcu.Pin22=PA13
+Mcu.Pin23=PA14
+Mcu.Pin24=VP_SYS_VS_tim1
+Mcu.Pin25=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin3=PF2
+Mcu.Pin4=PF3
+Mcu.Pin5=PF4
+Mcu.Pin6=PF9
+Mcu.Pin7=PF10
+Mcu.Pin8=PH0-OSC_IN
+Mcu.Pin9=PH1-OSC_OUT
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -93,8 +97,16 @@ PE3.Locked=true
 PE3.Signal=GPIO_Input
 PE4.Locked=true
 PE4.Signal=GPIO_Input
+PF1.Locked=true
+PF1.Signal=GPIO_Input
 PF10.Locked=true
 PF10.Signal=GPIO_Output
+PF2.Locked=true
+PF2.Signal=GPIO_Input
+PF3.Locked=true
+PF3.Signal=GPIO_Input
+PF4.Locked=true
+PF4.Signal=GPIO_Input
 PF9.GPIOParameters=PinState
 PF9.Locked=true
 PF9.PinState=GPIO_PIN_SET
