--- a/test.ioc
+++ b/test.ioc
@@ -60,8 +60,8 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM1_UP_TIM10_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
-NVIC.TIM2_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM1_UP_TIM10_IRQn=true\:14\:0\:true\:false\:true\:false\:true\:true
+NVIC.TIM2_IRQn=true\:15\:0\:true\:false\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
