--- a/test.ioc
+++ b/test.ioc
@@ -97,14 +97,22 @@ PE3.Locked=true
 PE3.Signal=GPIO_Input
 PE4.Locked=true
 PE4.Signal=GPIO_Input
+PF1.GPIOParameters=GPIO_PuPd
+PF1.GPIO_PuPd=GPIO_PULLUP
 PF1.Locked=true
 PF1.Signal=GPIO_Input
 PF10.Locked=true
 PF10.Signal=GPIO_Output
+PF2.GPIOParameters=GPIO_PuPd
+PF2.GPIO_PuPd=GPIO_PULLUP
 PF2.Locked=true
 PF2.Signal=GPIO_Input
+PF3.GPIOParameters=GPIO_PuPd
+PF3.GPIO_PuPd=GPIO_PULLUP
 PF3.Locked=true
 PF3.Signal=GPIO_Input
+PF4.GPIOParameters=GPIO_PuPd
+PF4.GPIO_PuPd=GPIO_PULLUP
 PF4.Locked=true
 PF4.Signal=GPIO_Input
 PF9.GPIOParameters=PinState
@@ -183,7 +191,7 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.IPParameters=Prescaler,Period,AutoReloadPreload
-TIM2.Period=5000-1
+TIM2.Period=100-1
 TIM2.Prescaler=8400-1
 USART1.BaudRate=4800000
 USART1.IPParameters=VirtualMode,BaudRate
