--- a/test.ioc
+++ b/test.ioc
@@ -12,39 +12,30 @@ Mcu.IP1=RCC
 Mcu.IP2=SYS
 Mcu.IP3=TIM2
 Mcu.IP4=USART1
-Mcu.IP5=USART2
-Mcu.IP6=USART3
-Mcu.IP7=USART6
-Mcu.IPNb=8
+Mcu.IP5=USART6
+Mcu.IPNb=6
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
-Mcu.Pin0=PE3
-Mcu.Pin1=PE4
-Mcu.Pin10=PA1
-Mcu.Pin11=PA2
-Mcu.Pin12=PA3
-Mcu.Pin13=PE15
-Mcu.Pin14=PB10
-Mcu.Pin15=PB11
-Mcu.Pin16=PC6
-Mcu.Pin17=PC7
-Mcu.Pin18=PC8
-Mcu.Pin19=PA8
-Mcu.Pin2=PF1
-Mcu.Pin20=PA9
-Mcu.Pin21=PA10
-Mcu.Pin22=PA13
-Mcu.Pin23=PA14
-Mcu.Pin24=VP_SYS_VS_tim1
-Mcu.Pin25=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin3=PF2
-Mcu.Pin4=PF3
-Mcu.Pin5=PF4
-Mcu.Pin6=PF9
-Mcu.Pin7=PF10
-Mcu.Pin8=PH0-OSC_IN
-Mcu.Pin9=PH1-OSC_OUT
-Mcu.PinsNb=26
+Mcu.Pin0=PF1
+Mcu.Pin1=PF2
+Mcu.Pin10=PC7
+Mcu.Pin11=PC8
+Mcu.Pin12=PA8
+Mcu.Pin13=PA9
+Mcu.Pin14=PA10
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=VP_SYS_VS_tim1
+Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin2=PF3
+Mcu.Pin3=PF4
+Mcu.Pin4=PF9
+Mcu.Pin5=PF10
+Mcu.Pin6=PH0-OSC_IN
+Mcu.Pin7=PH1-OSC_OUT
+Mcu.Pin8=PB10
+Mcu.Pin9=PC6
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -65,38 +56,37 @@ NVIC.TIM2_IRQn=true\:15\:0\:true\:false\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA1.Locked=true
-PA1.Signal=GPIO_Output
+PA10.GPIOParameters=GPIO_PuPd
+PA10.GPIO_PuPd=GPIO_PULLUP
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA2.Mode=Asynchronous
-PA2.Signal=USART2_TX
-PA3.Mode=Asynchronous
-PA3.Signal=USART2_RX
+PA8.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PA8.GPIO_PuPd=GPIO_PULLDOWN
+PA8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA8.Locked=true
 PA8.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB10.Mode=Asynchronous
-PB10.Signal=USART3_TX
-PB11.Mode=Asynchronous
-PB11.Signal=USART3_RX
+PB10.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PB10.GPIO_PuPd=GPIO_PULLDOWN
+PB10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB10.Locked=true
+PB10.Signal=GPIO_Output
 PC6.Mode=Asynchronous
 PC6.Signal=USART6_TX
+PC7.GPIOParameters=GPIO_PuPd
+PC7.GPIO_PuPd=GPIO_PULLUP
 PC7.Mode=Asynchronous
 PC7.Signal=USART6_RX
+PC8.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PC8.GPIO_PuPd=GPIO_PULLDOWN
+PC8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC8.Locked=true
 PC8.Signal=GPIO_Output
-PE15.Locked=true
-PE15.Signal=GPIO_Output
-PE3.Locked=true
-PE3.Signal=GPIO_Input
-PE4.Locked=true
-PE4.Signal=GPIO_Input
 PF1.GPIOParameters=GPIO_PuPd
 PF1.GPIO_PuPd=GPIO_PULLUP
 PF1.Locked=true
@@ -155,7 +145,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true,7-MX_USART6_UART_Init-USART6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_USART6_UART_Init-USART6-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -196,15 +186,7 @@ TIM2.Prescaler=8400-1
 USART1.BaudRate=4800000
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
-USART2.BaudRate=4800000
-USART2.IPParameters=VirtualMode,OverSampling,BaudRate
-USART2.OverSampling=UART_OVERSAMPLING_8
-USART2.VirtualMode=VM_ASYNC
-USART3.BaudRate=4800000
-USART3.IPParameters=VirtualMode,OverSampling,BaudRate
-USART3.OverSampling=UART_OVERSAMPLING_8
-USART3.VirtualMode=VM_ASYNC
-USART6.BaudRate=4800000
+USART6.BaudRate=4000000
 USART6.IPParameters=VirtualMode,OverSampling,BaudRate
 USART6.OverSampling=UART_OVERSAMPLING_16
 USART6.VirtualMode=VM_ASYNC
